Fixed the menu positioning. An oversite on my part. The parent container of the trigger and the menu needs to have positioning relative applied to it. THe clipping on the top-left opening menu is still buggy though.

--- a/docs/styles/views/pages/components/components.sass
+++ b/docs/styles/views/pages/components/components.sass
@@ -46,4 +46,7 @@
 		font-size: 16px
 		color: #fff
 
+.menu-test
+	position: relative
+
 @import "modals"
